--- a/CriminalIntent/app/src/main/res/layout/fragment_note.xml
+++ b/CriminalIntent/app/src/main/res/layout/fragment_note.xml
@@ -8,36 +8,37 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_title_label"
+        android:text="@string/note_title_label"
         style="?android:listSeparatorTextViewStyle"/>
 
     <EditText
-        android:id="@+id/crime_title"
+        android:id="@+id/note_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:hint="@string/crime_title_hint"/>
+        android:hint="@string/note_title_hint"/>
 
     <TextView
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_details_label"/>
+        android:text="@string/note_details_label"/>
 
     <Button
-        android:id="@+id/crime_date"
+        android:id="@+id/note_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"/>
 
+
     <CheckBox
-        android:id="@+id/crime_solved"
+        android:id="@+id/note_completed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:text="@string/crime_solved_label"/>
+        android:text="@string/note_completed_label"/>
 
 </LinearLayout>
