--- a/CriminalIntent/app/src/main/res/menu/fragment_note_list.xml
+++ b/CriminalIntent/app/src/main/res/menu/fragment_note_list.xml
@@ -3,7 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_item_new_crime"
+        android:id="@+id/menu_item_new_note"
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/new_note"
         app:showAsAction="ifRoom|withText"/>
