Fixed subtitle button

--- a/CriminalIntent/app/src/main/res/menu/fragment_note_list.xml
+++ b/CriminalIntent/app/src/main/res/menu/fragment_note_list.xml
@@ -7,10 +7,10 @@
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/new_note"
         app:showAsAction="ifRoom|withText"/>
-    <item
-        android:id="@+id/menu_item_show_subtitle"
-        android:title="@string/show_subtitle"
-        app:showAsAction="ifRoom"/>
+    <!--    <item
+            android:id="@+id/menu_item_show_subtitle"
+            android:title="@string/show_subtitle"
+            app:showAsAction="ifRoom"/>-->
     <item
         android:id="@+id/menu_item_sort_notes"
         android:title="@string/sort_notes"
