--- a/CriminalIntent/app/src/main/res/layout/fragment_note.xml
+++ b/CriminalIntent/app/src/main/res/layout/fragment_note.xml
@@ -39,32 +39,25 @@
         android:layout_height="wrap_content"
         android:text="@string/due_date_label"/>
 
-    <DatePicker
-        android:id="@+id/due_date_picker"
-        android:layout_width="wrap_content"
-        android:layout_height="75dp"
-        android:layout_marginLeft="16dp"
-        android:datePickerMode="spinner"
-        android:calendarViewShown="false"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TimePicker
-            android:id="@+id/due_time_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="75dp"
-            android:layout_marginLeft="8dp"
-            android:timePickerMode="spinner"/>
-
-        <Button
-            android:id="@+id/date_submit_button"
+        <EditText
+            android:id="@+id/due_date_picker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="@string/submit_button"/>
+            android:layout_marginLeft="16dp"
+            android:hint="@string/due_date_hint"/>
+
+        <EditText
+            android:id="@+id/due_time_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:hint="@string/due_time_hint"/>
 
     </LinearLayout>
 
@@ -81,5 +74,15 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:hint="@string/group_hint"/>
+
+    <TextView
+        style="?android:listSeparatorTextViewStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/priority_label"/>
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
