Added priority spinner.

--- a/CriminalIntent/app/src/main/res/layout/fragment_note.xml
+++ b/CriminalIntent/app/src/main/res/layout/fragment_note.xml
@@ -82,8 +82,10 @@
         android:text="@string/priority_label"/>
 
     <Spinner
+        android:id="@+id/priority_spinner"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        />
 
 
 </LinearLayout>
