--- a/CriminalIntent/app/src/main/res/layout/fragment_note.xml
+++ b/CriminalIntent/app/src/main/res/layout/fragment_note.xml
@@ -33,59 +33,13 @@
         android:layout_marginRight="16dp"
         android:hint="@string/note_details_hint"/>
 
-    <TextView
-        style="?android:listSeparatorTextViewStyle"
+
+    <CheckBox
+        android:id="@+id/note_completed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/due_date_label"/>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <DatePicker
-            android:id="@+id/due_date_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="75dp"
-            android:layout_marginLeft="16dp"
-            android:datePickerMode="spinner"
-            android:calendarViewShown="false"/>
-
-        <Button
-            android:id="@+id/date_submit_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="@string/submit_button"/>
-
-    </LinearLayout>
-
-    <TextView
-        style="?android:listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/group_label"/>
-
-    <EditText
-        android:id="@+id/note_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/group_hint"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
-
-    <TextView
-        style="?android:listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/priority_label"/>
-
-    <Spinner
-        android:id="@+id/priority_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-
+        android:layout_marginRight="16dp"
+        android:text="@string/note_completed_label"/>
 
 </LinearLayout>
