--- a/CriminalIntent/app/src/main/res/menu/fragment_note_list.xml
+++ b/CriminalIntent/app/src/main/res/menu/fragment_note_list.xml
@@ -11,8 +11,27 @@
             android:id="@+id/menu_item_show_subtitle"
             android:title="@string/show_subtitle"
             app:showAsAction="ifRoom"/>-->
+
+
+
     <item
         android:id="@+id/menu_item_sort_notes"
         android:title="@string/sort_notes"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="ifRoom|withText">
+        <!-- Starting the text color sub menu which have three items-->
+        <menu>
+            <item
+                android:id="@+id/menu_item_sort_by_date"
+                android:title="Sort by Date"
+                />
+            <item
+                android:id="@+id/menu_item_sort_by_priority"
+                android:title="Sort by Priority"
+                />
+            <item
+                android:id="@+id/menu_item_sort_by_group"
+                android:title="Sort by Group"
+                />
+        </menu>
+    </item>
 </menu>
