--- a/CriminalIntent/app/src/main/res/layout/widget_item.xml
+++ b/CriminalIntent/app/src/main/res/layout/widget_item.xml
@@ -12,6 +12,13 @@
         android:layout_alignParentRight="true"
         android:padding="4dp"/>
 
+    <Button
+        android:id="@+id/priority"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/checked"
+        android:padding="4dp"/>
+
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
