--- a/CriminalIntent/app/src/main/res/layout/fragment_note.xml
+++ b/CriminalIntent/app/src/main/res/layout/fragment_note.xml
@@ -79,13 +79,26 @@
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Priority"/>
+        android:text="Priority     Complete"/>
 
-    <Spinner
-        android:id="@+id/note_spinner"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"/>
+        android:orientation="horizontal">
+
+        <Spinner
+            android:id="@+id/note_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"/>
+
+        <CheckBox
+            android:id="@+id/check_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"/>
+
+    </LinearLayout>
 
 
 </LinearLayout>
