--- a/CriminalIntent/app/src/main/res/layout/widget_item.xml
+++ b/CriminalIntent/app/src/main/res/layout/widget_item.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
 
-    <Button
+    <ImageView
         android:id="@+id/checked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:padding="4dp"/>
+        android:padding="4dp"
+        app:srcCompat="@drawable/checked"/>
 
-    <Button
+    <ImageView
         android:id="@+id/priority"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/checked"
-        android:padding="4dp"/>
+        android:padding="4dp"
+        app:srcCompat="@drawable/priority_low"/>
 
     <TextView
         android:id="@+id/title"
