--- a/CriminalIntent/app/src/main/res/menu/fragment_note_list.xml
+++ b/CriminalIntent/app/src/main/res/menu/fragment_note_list.xml
@@ -7,6 +7,11 @@
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/new_note"
         app:showAsAction="ifRoom|withText"/>
+    <item
+        android:id="@+id/menu_item_delete_note"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="Delete Completed Tasks"
+        app:showAsAction="ifRoom|withText"/>
     <!--    <item
             android:id="@+id/menu_item_show_subtitle"
             android:title="@string/show_subtitle"
